[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tidal-memory"
version = "0.1.1"
description = "A quiet, layered memory engine for long-term human-AI relationships."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "038302"}]
license = {text = "Apache-2.0"}
dependencies = []

[project.scripts]
tidal-memory = "tidal_memory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
